# Pulse

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: command_bench.rs  frame_bench.rs  layout_bench.rs  style_bench.rs
docs/: architecture.md  build-app.md  composition.md  interface.md  migration-0.2-alpha.md  perf.md  styling.md  widgets-advanced.md
examples/: admin_console.rs  clipping.rs  composition.rs  counter.rs  diff.rs  emit.rs  events.rs  form_demo.rs  frame_check.rs  interface_layout.rs  keymap.rs  layout_demo.rs  log_explorer.rs  resize.rs  settings.rs  styled_text.rs  table_demo.rs  tabs_demo.rs
src/: app.rs  backend.rs  command.rs  component.rs  event.rs  frame.rs  layout.rs  lib.rs  runtime.rs  style.rs  theme.rs  ui.rs
themes/: cool.json  default.json  warm.json
