[package]
name = "pulse"
version = "0.2.0-alpha.1"
edition = "2021"
rust-version = "1.74"
description = "Minimal Elm-inspired terminal UI runtime for Rust"
license = "GPL-3.0-only"
repository = "https://github.com/nschaetti/Pulse"
readme = "README.md"
keywords = ["tui", "terminal", "elm", "ui"]
categories = ["command-line-interface"]

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "frame_bench"
harness = false

[[bench]]
name = "layout_bench"
harness = false

[[bench]]
name = "command_bench"
harness = false
